# rag-researcher

./: .gitignore  README.md  advice.md  evaluation-plan.md  pyproject.toml
config/: seeds.example.yaml  seeds.yaml
src/corpus_builder/: __init__.py  __main__.py  chunking.py  cli.py  crawl.py  index_chroma.py  ingest_pdfs.py  models.py  openalex.py  rag.py  server.py  viz.py
viz/: corpus-graph.html
web/: index.html
